# .nix-defexpr

./: .gitignore  default.nix  upgrade_rust.sh
backups/: backups.py  default.nix
ffmpeg-3.2/: default.nix
my-scripts/: default.nix
my-statusbar/: Cargo.nix  Cargo.toml  default.nix
my-statusbar/src/: input_handler.rs  interface.rs  main.rs  modules.rs  my-statusbar  setup.py  utils.rs
my-statusbar/src/modules/: alerts.rs  clip.rs  datetime.rs  psutil.rs
my-statusbar/src/my_statusbar/: lib.py
my-statusbar/src/utils/: msg_reader.rs  msg_writer.rs  route.rs
my-swayconf/: default.nix  post-start.sh  sway.conf
my-swayconf/swaync/: config.json
natpmploop/: default.nix
open-url-in/: Cargo.nix  Cargo.toml  default.nix  shell.nix
open-url-in/desktop/share/applications/: open-url-in.desktop
open-url-in/src/: main.rs
py-natpmp/: default.nix
ranger-patches/: fix-bulkrename.patch
sway-patches/: inhibit-fullscreen.patch
tubeup/: default.nix
twitch-chatlog/: node-packages.nix  package.json
units/kbfs/: default.nix
units/keybase/: default.nix
units/syncthing/: default.nix
unofficial-pdrive-cli/: sources.nix
unofficial-pdrive-cli/dotnet-crypto-go/: default.nix
unofficial-pdrive-cli/sdk-tech-demo/: default.nix
unofficial-pdrive-cli/unofficial-pdrive-cli/: default.nix
unofficial-pdrive-http-bridge/: default.nix  sources.nix
unofficial-pdrive-http-bridge/service/: default.nix
unofficial-pdrive-http-bridge/unofficial-pdrive-http-bridge/: default.nix
userwgns/: default.nix
yt-dlp/: package.nix
