[package]
name = "my-statusbar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
chrono = "0.4.42"
libc = "0.2.178"
netlink-sys = "0.8.7"
psutil = "5.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
wl-clipboard-rs = "0.9.2"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
