[package]
name = "my-statusbar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
chrono = "0.4.43"
libc = "0.2.182"
netlink-sys = "0.8.8"
psutil = "5.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
wl-clipboard-rs = "0.9.3"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
